  shortcut bug
- Fixed sptr->user->realhost becoming lowercase upon a +x
- Fixed +bbbbb lots of crap desynch bug
- Fixed OperOverride snotice bugs with halfop
- Standardized OperOverride notices
- Implemented new operoverride system
- Fixed some compile errors found by Zerwas and fixed some implementation problems of 
  the not able to set +z when there's non +z users (ULines not counted) in channel
- Fixed some SSL errors. read() returns -1 on error, so ircd_SSL_write and
  ircd_SSL_read must emulate the same. codemastr: could you check what the
  win32 equiviant of EIO is? I don't think my WSAEIO or whatever I called it
  in sys.h is correct.
- Seemingily we can't do SSLv3 only for ctx_server?
- Fixed some SJ3 bugs that could cause desync in rare cases
- Added some technical documentation in doc/technical. Docs include: 005.txt, base64.txt,
  token.txt, protoctl.txt, and vl.txt
- Send +f and +L in correct part of 005.
- Fixed SSL linking, again..
- SSL compile error fix in s_bsd.c
- Added some OpenSSL version showing
- Win32 SSL compile fixes
- Made /trace show correct for SSL handshake(s)
- RELEASENOTES stuff
- Win32 installer fixes (changed version to beta11)
- Changed version to beta11
- updated .RELEASE.NOTES to explain operinvite
- Fixed SSL compile error wrt to /trace
- Removed doc/features.txt, doc/unrealircd.conf.txt, include/relinfo.h,
  include/stamp.h, src/buildm4, src/chkconf.c, src/conftool.c
- Removed doc/Etiquette
- Compile error fix regarding version.h
- Made +x send out a SETHOST to VHP servers, requested by PreZ@DarkerNet
- Removed support for SSLv2 (SSLv2 is obsolete and insecure)
- .RELEASE.NOTES change
- Cleaned out Credits (i'll fix the web part of it later), made doug lea malloc default
  on Linux FSU Pthread installs. (When we got a better way, we will have full doug lea malloc..)
- Made OPEROVERRIDE_VERIFY default undeffed
- SSL fixes to deal with not allowing SSLv2